# COMP0182-Real-world-Multi-agent-Systems

./: README.md  envros2.yaml
Lab_0/: lab_zero  lab_zero.md
Lab_1/: Lab_1.md
Lab_2/: Lab_2.md
Lab_3/: Lab_3.md
Lab_4/: Lab_4.md
Lab_5/: Lab_5.md
Lab_6/: Lab_6.md
Lab_8/: Lab_8.md  aruco_detection.md  goal_pose.py
Lab_final_challenge/: ArUco_Multi_Robot_Navigation_Guide.md  multi_agent.md  multi_agent.py  multi_agent_lab.md
mutli_agent_systems_ws/src/phasespace_msgs/: CMakeLists.txt  README.md  package.xml
yolo/: package.xml  setup.py
yolo/config/: camera.yaml  rooms.yaml  task_logic_params.yaml
yolo/launch/: yolo_test.launch.py
yolo/yolo/: camera_publisher.py  ultralytics_yolo.py  yolo_inference.py  yolo_test.py
yolo_test/: README.md  yolo_test.py
